@@ -1,3 +1,6 @@
+Nov 17, 2023
+  tuned up logging
+
 Nov 06, 2023
   upgraded to java 17
 
